data/prototype_B_results/prompt2/sample8/prompt_2.tf
provider "aws" {
  region = "us-west-2"
}

resource "aws_vpc" "example" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_internet_gateway" "example" {
  vpc_id = aws_vpc.example.id
}

resource "aws_eip" "example" {
  vpc      = true
}

resource "aws_nat_gateway" "example" {
  allocation_id = aws_eip.example.id
  subnet_id     = aws_subnet.example.id
}

resource "aws_subnet" "example" {
  vpc_id     = aws_vpc.example.id
  cidr_block = "10.0.1.0/24"
}

resource "aws_flow_log" "example" {
  iam_role_arn    = "arn:aws:iam::123456789012:role/flowlogsRole"
  traffic_type    = "ALL"
  log_destination = "arn:aws:logs:us-west-2:123456789012:log-group:/aws/vpc/flow-logs"
  vpc_id          = aws_vpc.example.id
}

resource "aws_route_table" "example" {
  vpc_id = aws_vpc.example.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.example.id
  }

  tags = {
    Name = "example-route-table"
  }
}
